[gd_scene load_steps=26 format=3 uid="uid://cxbl28ooc0dml"]

[ext_resource type="Script" uid="uid://deidus18y3ncd" path="res://script/pluto_nave.gd" id="1_7ljt8"]
[ext_resource type="Texture2D" uid="uid://bbpoivpyesmk8" path="res://assets/sprites/Alien/Alien_plutton_nav (1).png" id="1_nv0m4"]
[ext_resource type="Texture2D" uid="uid://dcfdtg3mputcn" path="res://assets/sprites/Alien/Alien_plutton_nav_dano.png" id="2_c8ey1"]
[ext_resource type="Texture2D" uid="uid://bljoos6l8xnyd" path="res://assets/sprites/Alien/plutton_nav_quebrada.png" id="4_tffs7"]
[ext_resource type="Texture2D" uid="uid://b7xs76ckx8y6v" path="res://assets/sprites/Alien/plutton_nav_quebrando.png" id="5_7ljt8"]
[ext_resource type="AudioStream" uid="uid://pxmshnt4lnov" path="res://assets/sound/cair.mp3" id="6_426xl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tffs7"]
atlas = ExtResource("2_c8ey1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ljt8"]
atlas = ExtResource("2_c8ey1")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpmlk"]
atlas = ExtResource("1_nv0m4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ey1"]
atlas = ExtResource("1_nv0m4")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_426xl"]
atlas = ExtResource("4_tffs7")
region = Rect2(2, 38, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoee4"]
atlas = ExtResource("4_tffs7")
region = Rect2(65, 38, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dt8r"]
atlas = ExtResource("5_7ljt8")
region = Rect2(4, 37, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngbv8"]
atlas = ExtResource("5_7ljt8")
region = Rect2(67, 37, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir71w"]
atlas = ExtResource("5_7ljt8")
region = Rect2(130, 37, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7v6k"]
atlas = ExtResource("5_7ljt8")
region = Rect2(193, 37, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_28kqp"]
atlas = ExtResource("5_7ljt8")
region = Rect2(4, 165, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b650p"]
atlas = ExtResource("5_7ljt8")
region = Rect2(67, 165, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t423o"]
atlas = ExtResource("5_7ljt8")
region = Rect2(130, 165, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b25n"]
atlas = ExtResource("5_7ljt8")
region = Rect2(193, 165, 63, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tffs7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ljt8")
}],
"loop": false,
"name": &"dano",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpmlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8ey1")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_426xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoee4")
}],
"loop": true,
"name": &"quebrado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dt8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngbv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir71w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7v6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28kqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b650p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t423o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b25n")
}],
"loop": false,
"name": &"queda",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c8ey1"]
radius = 17.0
height = 40.0

[sub_resource type="Animation" id="Animation_tffs7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_c8ey1"]
resource_name = "invencivel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"dano", &"dano"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ljt8"]
_data = {
&"RESET": SubResource("Animation_tffs7"),
&"invencivel": SubResource("Animation_c8ey1")
}

[node name="pluto_nave" type="CharacterBody2D" groups=["Player"]]
z_index = 1
position = Vector2(0, 3)
script = ExtResource("1_7ljt8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tffs7")
autoplay = "default"
frame_progress = 0.149214

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_c8ey1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7ljt8")
}
autoplay = "RESET"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_426xl")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
